# face_id_attr

./: .gitignore  README.md  __init__.py  __main__.py  config.yaml  factory.py  main.py  pipeline.py  pyproject.toml  requirements.txt
module/: __init__.py
module/face_alignment/: README.md  __init__.py  base.py  mediapipe_aligner.py  pfld_aligner.py  simple_aligner.py
module/face_analysis/: README.md  __init__.py  base.py  deepface_analyzer.py  expression_analyzer.py  head_pose_estimator.py
module/face_database/: README.md  __init__.py  base.py  numpy_db.py
module/face_detection/: README.md  __init__.py  base.py  deepface_detector.py  opencv_detector.py  yolo_detector.py  yunet_detector.py
module/face_quality/: README.md  __init__.py  base.py  fqa_assessor.py  serfiq_assessor.py
module/face_recognition/: README.md  __init__.py  arcface_recognizer.py  base.py  deepface_recognizer.py  histogram_recognizer.py  sface_recognizer.py
module/face_tracking/: __init__.py  byte_tracker.py  iou_tracker.py  sort_tracker.py
